# two_arms_sim

./: README.md
two_arms_sim/: CMakeLists.txt  package.xml
two_arms_sim/controller/: arm_controller_ur10.yaml
two_arms_sim/include/: arm_traj_controller.hpp
two_arms_sim/launch/: main.launch  two_arms.launch  ur10_arm.launch  ur10_e_arm.launch
two_arms_sim/src/: arm_traj_controller.cpp  mongodb_extract.cpp  moveit_example.cpp  test.cpp
