<?xml version="1.0"?>
<package format="2">
  <name>two_arms_sim</name>
  <version>1.0.0</version>
  <description>
      Test trial.
  </description>
  <maintainer email="christopherlaukl@gmail.com">CLKL</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>mongodb_store</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_visual_tools</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
